Changed from paragraphs to lists

--- a/courses.html
+++ b/courses.html
@@ -70,10 +70,12 @@
 					</div>
 				</div>
 				<h2>Application procedure</h2>
-				<br><p><b>Step 1</b> -	Check the General requirements	</p>
-				<br><p><b>Step 2</b> -	Register on Studielink      	</p>
-				<br><p><b>Step 3</b> - 	Submit application documents	</p>
-				<br><p><b>Step 4</b> - 	Finalise your application    	</p><br>
+					<ul>
+						<li>	<b>Step 1</b> -	Check the General requirements	</li>
+						<li>	<b>Step 2</b> -	Register on Studielink      	</li>
+						<li>	<b>Step 3</b> - Submit application documents	</li>
+						<li>	<b>Step 4</b> - Finalise your application    	</li>
+					</ul>				
 				</article>
 				
 			<article>
@@ -87,12 +89,20 @@
 					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
 				</p>
 				<h2>Content</h2>
-				<p>
-					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Electrical engineering gets used to the study load.
-					<br><br><b>Year two</b> - the focus is shifted more towards the specific subjects in the study: embedded systems and power systems
-					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
-					<br><br><b>Year four</b> - you'll go on an exchange course - you can choose the country of interest.
-				</p>
+				<ul>
+					<li>
+						<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Electrical engineering gets used to the study load.
+					</li>
+					<li>
+						<b>Year two</b> - the focus is shifted more towards the specific subjects in the study: embedded systems and power systems.
+					</li>
+					<li>
+						<b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					</li>
+					<li>
+						<b>Year four</b> - you'll go on an exchange course - you can choose the country of interest.
+					</li>
+				</ul>
 				<h2>Career prospects </h2>
 				<p>
 					After you complete the course you can work in the field of Electrical engineering as a quality, software and or hardware engineer, a systems analyst and much more.
@@ -109,12 +119,20 @@
 					The Bachelor's course in Information technology in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Information technology. You can start the study with no prior knowledge and our experienced team will guide you through the course answering all of your questions.
 				</p>
 				<h2>Content</h2>
-				<p>
-					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
-					<br><br><b>Year two</b> - the focus is shifted more towards the specific subjects in the study: software engineering and databases.
-					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
-					<br><br><b>Year four</b> - you'll go on an exchange course - you can choose the country of interest.
-				</p>
+				<ul>
+					<li>
+						<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
+					</li>
+					<li>
+						<b>Year two</b> - the focus is shifted more towards the specific subjects in the study: software engineering and databases.
+					</li>
+					<li>
+						<b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					</li>
+					<li>
+						<b>Year four</b> - you'll go on an exchange course - you can choose the country of interest.
+					</li>
+				</ul>
 				<h2>Career prospects</h2>
 				<p>
 					After you complete the course you can work in the field of Information technology as a software engineer, a cloud architect, a computer forensic investigator and much more.
@@ -134,12 +152,20 @@
 					The Bachelor's course in Electronic music in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electronic music. You can start the study with no prior knowledge and our experienced team will guide you through the course answering all of your questions.
 				</p>
 				<h2>Content</h2>
-				<p>
-					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Electronic music gets used to the study load.
-					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study.
-					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
-					<br><br><b>Year four</b> - you'll go on an exchange course - you can choose the country of interest.
-				</p>
+				<ul>					
+					<li>
+						<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Electronic music gets used to the study load.
+					</li>
+					<li>
+						<b>Year two</b> - The focus is shifted more towards the specific subjects in the study.
+					</li>
+					<li>
+						<b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					</li>
+					<li>
+						<b>Year four</b> - you'll go on an exchange course - you can choose the country of interest.
+					</li>
+				</ul>
 				<h2>Career prospects</h2>
 				<p>
 					After you complete the course you can go ahead with your career in the fields of the arts.
@@ -157,12 +183,22 @@
 					The Bachelor's course in Classical instruments in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Classical instruments. You can start the study with no prior knowledge and our experienced team will guide you through the course answering all of your questions.
 				</p>
 				<h2>Content</h2>
-				<p>
-					<b>Year one</b> -foundation phase. In the first half, you'll get to know the field of Classical instruments gets used to the study load and learn the basics of building a classical guitar.
-					<br><br><b>Year two</b> - the focus is shifted more towards acoustics.
-					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
-					<br><br><b>Year four</b> - you'll go on an exchange course - you can choose the country of interest.
-				</p>
+			
+				<ul>
+					<li>
+						<b>Year one</b> -foundation phase. In the first half, you'll get to know the field of Classical instruments gets used to the study load and learn the basics of building a classical guitar.
+					</li>
+					<li>
+						<b>Year two</b> - the focus is shifted more towards acoustics.
+					</li>
+					<li>
+						<b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					</li>
+					<li>
+						<b>Year four</b> - you'll go on an exchange course - you can choose the country of interest.
+					</li>
+				</ul>	
+				
 				<h2>Career prospects</h2>
 				<p>
 					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
