--- a/courses.html
+++ b/courses.html
@@ -40,7 +40,7 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<div class="banner" id='general'>
+				<div class="banner" id='generalRequirements'>
 					<div class="overlayNoTransition">
 						<p>General requirements</p>
 					</div>
@@ -61,10 +61,10 @@
 					<br><br><b>High school graduation diploma</b> from an accredited institution.
 				<br><br></p>
 				
-</article>
+				</article>
 
 				<article>
-				<div class="banner" id='apply'>
+				<div class="banner" id='howToApply'>
 					<div class="overlayNoTransition">
 						<p>How to apply</p>
 					</div>
@@ -76,7 +76,7 @@
 						<li>	<b>Step 3</b> - Submit application documents	</li>
 						<li>	<b>Step 4</b> - Finalise your application    	</li>
 					</ul>				
-				</article>
+			</article>
 				
 			<article>
 				<div class="banner" id='electricalEngineering'>
@@ -105,8 +105,8 @@
 				</ul>
 				<h2>Career prospects </h2>
 				<p>
-					After you complete the course you can work in the field of Electrical engineering as a quality, software and or hardware engineer, a systems analyst and much more.
-				<br><br></p>
+					After you complete the course you can work in the field of Electrical engineering as a quality, software and or hardware engineer, a systems analyst and much more.<br><br>
+				</p>
 			</article>
 			<article>
 				<div class="banner" id='informationTechnology'>
@@ -175,7 +175,7 @@
 			<article>
 				<div class="banner" id='classicalInstruments'>
 					<div class="overlayNoTransition">
-						<p>Classical instruments</p>
+						<p>Building Classical Instruments</p>
 					</div>
 				</div>
 				<h2>Introduction</h2>
