finished the events page and fixed some of the links from contact page

--- a/events.html
+++ b/events.html
@@ -45,21 +45,30 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<div><h1>Event1</h1> <span>19-10-2017</span> </div>
+				<div><h1>Open Day</h1></div>
 				<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac mattis leo. Donec accumsan, libero ut iaculis pharetra, nibh eros dignissim sem, in viverra nisi odio quis nisl. Aliquam pharetra augue id varius commodo. Nullam vitae lacus at nibh hendrerit porttitor. Phasellus dapibus in arcu et eleifend. Fusce non maximus felis. Etiam nec porttitor ipsum. In sodales feugiat dolor et bibendum. Duis quis urna dolor.<br><br>
+				Open Day gives you a chance to meet our first class teaching staff and to find out more about studying here.</p>
 
-				Curabitur velit ipsum, imperdiet ut molestie eu, facilisis id mauris. Ut cursus lacinia aliquet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam pharetra id felis non gravida. Vivamus orci arcu, ornare non porta id, dapibus sed ex. Cras eu lorem justo. In vehicula diam sit amet dictum fermentum. Etiam non ex velit. In nunc sapien, porta vel massa in, mollis finibus neque. Nulla sit amet mauris nibh. Aliquam erat volutpat. Integer pulvinar vestibulum ligula, a consequat justo feugiat eu. Fusce vel tincidunt justo. Aliquam erat volutpat. Duis id tincidunt magna. Etiam vel tempor mauris.<br><br>
-
-				Vestibulum posuere, justo ac porta molestie, ligula dolor congue est, in faucibus est libero interdum neque. Sed dolor quam, placerat et ultrices tempus, porttitor sed nulla. Curabitur feugiat hendrerit nisi, sit amet sodales nibh tristique non. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce a sem nec turpis facilisis tincidunt. Suspendisse suscipit odio a urna aliquet auctor. Nullam vel ligula sed lorem mattis vulputate.
+‌‌				<h3>Subject stands and talks</h3> 
+				<p>
+				Our subject talks will give you more information about your chosen discipline and what the next few years might look like if you choose
+				to study here. If you don't get all the answers to your questions at the talk, you can also chat to our academic staff at the subject stand
+				to find out more. A representative from most degree programmes will be present at the subject fair.
 				</p>
 			</article>
 			<article>
-				<div><h1>Event2</h1><span>17-10-2017</span></div>
+				<div><h1>Study Choice</h1></div>
 				<p>
-					Pellentesque lobortis, quam blandit mollis dictum, quam erat eleifend eros, ac rhoncus augue dui bibendum tortor. Sed vitae lectus a nibh pulvinar sodales eu eu ante. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque nulla purus, fermentum sed neque a, molestie gravida orci. Maecenas cursus laoreet nibh, id semper nibh scelerisque nec. Proin at mi interdum, ullamcorper elit vel, imperdiet dui. Aenean id ligula sed enim dapibus tincidunt id nec nisi. Sed eget massa lacus. Vestibulum tincidunt semper ante et congue. Fusce consequat sodales sem eu pellentesque. Curabitur ac tristique elit. Vivamus auctor sagittis lacus quis vulputate. Morbi eros leo, posuere eu orci nec, congue tristique erat. Sed consectetur nisi urna, quis fermentum ipsum auctor at.<br><br>
-
-					Curabitur et magna venenatis, blandit dui sit amet, volutpat quam. Integer eu maximus nibh, in tristique quam. Proin pretium lacus mattis arcu pellentesque viverra. Aenean vitae malesuada odio, ac pretium turpis. Donec dui ligula, auctor condimentum dignissim id, hendrerit eu lectus. Cras vel vulputate nibh. Duis interdum feugiat sagittis. In convallis risus quam, ac placerat erat consectetur sed. Maecenas sodales magna sed consectetur viverra. In quis tortor eget ligula pretium molestie id vitae ligula. Sed finibus dictum mi, eget pharetra elit volutpat mattis. Sed vel velit vel mauris venenatis aliquam quis in nibh.
+				The study choice event is one of the most important events you can participate, you can find more information about the study options we offer and get a better understanding of what
+				our university has to offer.
+				</p>
+			</article>
+			<article>
+				<div><h1>International Day</h1></div>
+				<p>
+				THE Da Vinci Universit International Day is a great opportunity to get off to the best start. You’ll learn about practical and important things to do in your first week, the academic
+				and social experience at Da Vinci, and meet new friends. Get involved right away by learning more about the clubs and societies, volunteering opportunities, and the
+				support available to you as an international student.
 				</p>
 			</article>
 		</div>
