--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
 		<nav>
 			<ul>	
 				<li><a href="index.html">Home</a></li>
-				<li><a href="">About</a></li>
-				<li><a href="">Courses</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="courses.html">Courses</a></li>
 				<li><a href="events.html">Events</a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="contact.html">Contact</a></li>
