mod. coursesit. Fixed typo in Contactit. Translated Events and fixed typo

--- a/coursesit.html
+++ b/coursesit.html
@@ -87,12 +87,12 @@
 					Il corso di Ingegneria Elettronica alla Da Vinci University ti darà un ottimo inizio in questo emozionante campo. Con la nostra squadra di insegnante, espanderai le tue conoscenze nel campo dell'Ingegneria Elettronica. Puoi iniziare gli studi senza alcuna conoscenza precedente e il nostro team ti guidera attraverso il corso rispondendo a tutte le tue domande.
 				</p>
 				<h2>Contenuti</h2>
-				<p>
-					<b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. 
-					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: sistemi integrati e sistemi di potenza.
-					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
-					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
-				</p>
+				<ul>
+					<li><b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio.</li>
+					<li><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: sistemi integrati e sistemi di potenza.</li>
+					<li><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocini<li>
+					<li><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interes<li>
+				</ul>
 				<h2>Prospettive di Carriera</h2>
 				<p>
 					Dopo il completamento del corso potrai lavorare nel campo dell'Ingegneria Elettronica come ingegnere di qualità, dei software o degli hardware, analista di sistemi e molto altro.
@@ -109,12 +109,12 @@
 					Il corso di Ingegneria Informatica alla Da Vinci University ti darà un ottimo inizio in questo emozionante campo. Con la nostra squadra di insegnante, espanderai le tue conoscenze nel campo dell'Ingegneria Elettronica. Puoi iniziare gli studi senza alcuna conoscenza precedente e il nostro team ti guidera attraverso il corso rispondendo a tutte le tue domande.
 				</p>
 				<h2>Contenuti</h2>
-				<p>
-					<b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. 
-					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: ingegneria del software e database.
-					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
-					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
-				</p>
+				<ul>
+					<li><b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. </li>
+					<li><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche: ingegneria del software e database.</li>
+					<li><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. </li>
+					<li><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.</li>
+				</ul>
 				<h2>Prospettive di Carriera</h2>
 				<p>
 					Dopo il completamento del corso potrai lavorare nel campo dell'Ingegneria informatica come ingegnere dei software, architetto del cloud, investigstore forense informatico e molto altro.
@@ -133,12 +133,12 @@
 					Il corso di Musica Elettronia alla Da Vinci University ti darà un ottimo inizio in questo emozionante campo. Con la nostra squadra di insegnante, espanderai le tue conoscenze nel campo della Musica Elettronica. Puoi iniziare gli studi senza alcuna conoscenza precedente e il nostro team ti guidera attraverso il corso rispondendo a tutte le tue domande.
 				</p>
 				<h2>Contenuti</h2>
-				<p>
-					<b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. 
-					<br><br><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche.
-					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
-					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
-				</p>
+				<ul>
+					<li><b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. </li>
+					<li><b>Secondo anno</b> - L'attenzione si sposta su materie di studio specifiche.</li>
+					<li><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. </li>
+					<li><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.</li>
+				</ul>
 				<h2>Prospettive di Carriera</h2>
 				<p>
 					Dopo il completamento del corso potrai andare avanti con la tua carriera e lavorare nell'emozionante mondo delle arti.
@@ -156,12 +156,12 @@
 					Il corso di Strumeti Classici alla Da Vinci University ti darà un ottimo inizio in questo emozionante campo. Con la nostra squadra di insegnante, espanderai le tue conoscenze nel campo degli Strumenti Classici. Puoi iniziare gli studi senza alcuna conoscenza precedente e il nostro team ti guidera attraverso il corso rispondendo a tutte le tue domande.
 				</p>
 				<h2>Contenuti</h2>
-				<p>
-					<b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. 
-					<br><br><b>Secondo anno</b> - L'attenzione si sposta maggiormente sull'acustica.
-					<br><br><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. 
-					<br><br><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.
-				</p>
+				<ul>
+					<li><b>Primo anno</b> - Fase iniziale. Nella prima metà inizierai a conoscere il campo dell'Ingegneria Elettronica e ti abbituerai alla mole di studio. </li>
+					<li><b>Secondo anno</b> - L'attenzione si sposta maggiormente sull'acustica.</li>
+					<li><b>Terzo anno</b> - Durante questo anno otterai esperienza sul campo in un tirocinio. </li>
+					<li><b>Quarto anno</b> - Andrai in uno scambio interculturale - puoi scegliere la nazione di interesse.</li>
+				</ul>
 				<h2>Prospettive di Carriera</h2>
 				<p>
 					Dopo il completamento del corso potrai lavorare come un artigiano di strumenti classici.
