--- a/events.html
+++ b/events.html
@@ -59,14 +59,14 @@
 			<article>
 				<div><h1>Study Choice</h1></div>
 				<p>
-				The study choice event is one of the most important events you can participate, you can find more information about the study options we offer and get a better understanding of what
+				The study choice is one of the most important events you can participate, you can find more information about the study options we offer and get a better understanding of what
 				our university has to offer.
 				</p>
 			</article>
 			<article>
 				<div><h1>International Day</h1></div>
 				<p>
-				THE Da Vinci Universit International Day is a great opportunity to get off to the best start. You’ll learn about practical and important things to do in your first week, the academic
+				THE Da Vinci University International Day is a great opportunity to get off to the best start. You’ll learn about practical and important things to do in your first week, the academic
 				and social experience at Da Vinci, and meet new friends. Get involved right away by learning more about the clubs and societies, volunteering opportunities, and the
 				support available to you as an international student.
 				</p>
