--- a/eventsit.html
+++ b/eventsit.html
@@ -44,21 +44,25 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<div><h1>Evento1</h1> <span>19-10-2017</span> </div>
+				<div><h1>Open Day</h1></div>
 				<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac mattis leo. Donec accumsan, libero ut iaculis pharetra, nibh eros dignissim sem, in viverra nisi odio quis nisl. Aliquam pharetra augue id varius commodo. Nullam vitae lacus at nibh hendrerit porttitor. Phasellus dapibus in arcu et eleifend. Fusce non maximus felis. Etiam nec porttitor ipsum. In sodales feugiat dolor et bibendum. Duis quis urna dolor.<br><br>
+				L'Open Day ti darà la possibilità di incontrare gli insegnanti del primo corso di studio e di scoprire di più su cosa studierai qui.</p>
 
-				Curabitur velit ipsum, imperdiet ut molestie eu, facilisis id mauris. Ut cursus lacinia aliquet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam pharetra id felis non gravida. Vivamus orci arcu, ornare non porta id, dapibus sed ex. Cras eu lorem justo. In vehicula diam sit amet dictum fermentum. Etiam non ex velit. In nunc sapien, porta vel massa in, mollis finibus neque. Nulla sit amet mauris nibh. Aliquam erat volutpat. Integer pulvinar vestibulum ligula, a consequat justo feugiat eu. Fusce vel tincidunt justo. Aliquam erat volutpat. Duis id tincidunt magna. Etiam vel tempor mauris.<br><br>
-
-				Vestibulum posuere, justo ac porta molestie, ligula dolor congue est, in faucibus est libero interdum neque. Sed dolor quam, placerat et ultrices tempus, porttitor sed nulla. Curabitur feugiat hendrerit nisi, sit amet sodales nibh tristique non. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce a sem nec turpis facilisis tincidunt. Suspendisse suscipit odio a urna aliquet auctor. Nullam vel ligula sed lorem mattis vulputate.
+‌‌				<h3>Stands e discussioni</h3> 
+				<p>
+				I nostri stand ti daranno più informazioni sulla tua materia di scelta e un impressione di ciò che sarà nei prossimi anni qui. Se non ottieni tutte le risposte alle tue domande durante la discussione, puoi anche parlare con il nostro staff per scoprire di più. Un rappresentante per quasi ognuno dei nostri programmi di laurea sarà presente alla fiera.
 				</p>
 			</article>
 			<article>
-				<div><h1>Evento2</h1><span>17-10-2017</span></div>
+				<div><h1>Study Choice</h1></div>
 				<p>
-					Pellentesque lobortis, quam blandit mollis dictum, quam erat eleifend eros, ac rhoncus augue dui bibendum tortor. Sed vitae lectus a nibh pulvinar sodales eu eu ante. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque nulla purus, fermentum sed neque a, molestie gravida orci. Maecenas cursus laoreet nibh, id semper nibh scelerisque nec. Proin at mi interdum, ullamcorper elit vel, imperdiet dui. Aenean id ligula sed enim dapibus tincidunt id nec nisi. Sed eget massa lacus. Vestibulum tincidunt semper ante et congue. Fusce consequat sodales sem eu pellentesque. Curabitur ac tristique elit. Vivamus auctor sagittis lacus quis vulputate. Morbi eros leo, posuere eu orci nec, congue tristique erat. Sed consectetur nisi urna, quis fermentum ipsum auctor at.<br><br>
-
-					Curabitur et magna venenatis, blandit dui sit amet, volutpat quam. Integer eu maximus nibh, in tristique quam. Proin pretium lacus mattis arcu pellentesque viverra. Aenean vitae malesuada odio, ac pretium turpis. Donec dui ligula, auctor condimentum dignissim id, hendrerit eu lectus. Cras vel vulputate nibh. Duis interdum feugiat sagittis. In convallis risus quam, ac placerat erat consectetur sed. Maecenas sodales magna sed consectetur viverra. In quis tortor eget ligula pretium molestie id vitae ligula. Sed finibus dictum mi, eget pharetra elit volutpat mattis. Sed vel velit vel mauris venenatis aliquam quis in nibh.
+				Lo Study Choice è uno degli eventi più importanti a cui si può partecipare, puoi trovare più informazioni sulle tue scelte di studio che offriamo e capire meglio ciò che l'università ha da offrire.
+				</p>
+			</article>
+			<article>
+				<div><h1>International Day</h1></div>
+				<p>
+				L' International Day alla Da Vinci University è una grande opportunità per avere un migliore inizio. Imparerai cose importanti e pratiche da fare nella prima settimana, le esperienze accademiche e sociali alla Da Vinci, e incontrerai nuovi amici. Unisciti subito e impara di più sui club e le società, opportunità di volontariato, e il supporto disponibile per te che sei uno studente internazionale. 
 				</p>
 			</article>
 		</div>
