add index content

--- a/events.html
+++ b/events.html
@@ -45,7 +45,7 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<div><h1>Open Day</h1></div>
+				<h2>Open Day</h2>
 				<p>
 				Open Day gives you a chance to meet our first class teaching staff and to find out more about studying here.</p>
 
@@ -57,14 +57,14 @@
 				</p>
 			</article>
 			<article>
-				<div><h1>Study Choice</h1></div>
+				<h2>Study Choice</h2>
 				<p>
 				The study choice is one of the most important events you can participate, you can find more information about the study options we offer and get a better understanding of what
 				our university has to offer.
 				</p>
 			</article>
 			<article>
-				<div><h1>International Day</h1></div>
+				<h2>International Day</h2>
 				<p>
 				THE Da Vinci University International Day is a great opportunity to get off to the best start. You’ll learn about practical and important things to do in your first week, the academic
 				and social experience at Da Vinci, and meet new friends. Get involved right away by learning more about the clubs and societies, volunteering opportunities, and the
