--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 			<article>
 				<h2>Study international at<br>Da Vinci University</h2>
 				<p>
-					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?
+					Da Vinci University offers you an international studying environment to complete your studies with students from over 50 different countries all over the world. Every year dozens of students complete their bachelor's or master's program in one of our international courses. 
+				</p>
+				<p>
+					Your diploma in Technical Engineering, Information Technology, Electronic Music or Building Classical Instruments will be acknowledged worldwide and you have good chances starting your career in a multinational company.
 				</p>
 			</article>
 			<article class="dualbox">
@@ -66,11 +69,11 @@
 			<article>
 				<h2>More than just a Number</h2>
 				<p>
-				quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?
+				At Da Vinci University students works in close surroundings to their lecturers and are treated equal and with respect. Each day there is a specified time where students can consult their lecturers with study related and personal matters.
 				</p>
 
 				<p>
-				magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit? quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
+				Every period students also have to complete a project in a small working group. This does not only only improve the learning success, but also the social skills and leads to a social learning environment through your studies. 
 				</p>
 			</article>
 		</div>
