--- a/aboutit.html
+++ b/aboutit.html
@@ -34,7 +34,7 @@
 				<li><a href="aboutit.html">Su di noi</a></li>
 				<li><a href="coursesit.html">Corsi</a></li>
 				<li><a href="eventsit.html">Eventi</a></li>
-				<li><a href="newsit.html.php">Novità</a></li>
+				<li><a href="newsit.html">Novità</a></li>
 				<li><a href="contactit.html">Contatti</a></li>
 			</ul>
 		</nav>
@@ -118,7 +118,7 @@
 					<li><a href="aboutit.html">Su di noi</a></li>
 					<li><a href="coursesit.html">Corsi</a></li>
 					<li><a href="eventsit.html">Eventi</a></li>
-					<li><a href="newsit.html.php">Novità</a></li>
+					<li><a href="newsit.html">Novità</a></li>
 					<li><a href="contactit.html">Contatti</a></li>
 				</ul>
 			</div>
