--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<li><a href="about.html">About</a></li>
 				<li><a href="courses.html">Courses</a></li>
 				<li><a href="events.html">Events</a></li>
-				<li><a href="news.html.php">News</a></li>
+				<li><a href="news.html">News</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
@@ -114,7 +114,7 @@
 					<li><a href="about.html">About</a></li>
 					<li><a href="courses.html">Courses</a></li>
 					<li><a href="events.html">Events</a></li>
-					<li><a href="news.html.php">News</a></li>
+					<li><a href="news.html">News</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
