--- a/news.html
+++ b/news.html
@@ -1,7 +1,3 @@
-<?php
-include_once("php/news.php");
-?>
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -29,7 +25,7 @@ include_once("php/news.php");
 			</div>
 
 			<div id="flag">
-				<a href="newsit.html.php"><img src="img/it_flag.png" alt="italian flag"></a>
+				<a href="newsit.html"><img src="img/it_flag.png" alt="italian flag"></a>
 			</div>
 		</div>
 	</header>
@@ -40,23 +36,17 @@ include_once("php/news.php");
 				<li><a href="about.html">About</a></li>
 				<li><a href="courses.html">Courses</a></li>
 				<li><a href="events.html">Events</a></li>
-				<li><a href="news.html.php">News</a></li>
+				<li><a href="news.html">News</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</div>
 	<div class="wrapper">
 		<div id="content">
-			<?php
-				foreach($newsitems as $newsitem){
-					echo "
 					<article>
-						<div><h1>".$newsitem['title']."</h1> <span>".$newsitem['date']."</span> </div>
-						<p>".$newsitem['description']."</p>
+						<div><h1></h1> <span></span> </div>
+						<p></p>
 					</article>
-					";
-				}
-			?>
 		</div>
 
 		<aside>
@@ -107,7 +97,7 @@ include_once("php/news.php");
 					<li><a href="about.html">About</a></li>
 					<li><a href="courses.html">Courses</a></li>
 					<li><a href="events.html">Events</a></li>
-					<li><a href="news.html.php">News</a></li>
+					<li><a href="news.html">News</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
