--- a/newsit.html
+++ b/newsit.html
@@ -1,7 +1,3 @@
-<?php
-include_once("php/news.php");
-?>
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -29,7 +25,7 @@ include_once("php/news.php");
 			</div>
 
 			<div id="flag">
-				<a href="news.html.php"><img src="img/uk_flag.png" alt="brittish flag"></a>
+				<a href="news.html"><img src="img/uk_flag.png" alt="brittish flag"></a>
 			</div>
 		</div>
 	</header>
@@ -40,7 +36,7 @@ include_once("php/news.php");
 				<li><a href="aboutit.html">About</a></li>
 				<li><a href="coursesit.html">Courses</a></li>
 				<li><a href="eventsit.html">Events</a></li>
-				<li><a href="newsit.html.php">News</a></li>
+				<li><a href="newsit.html">News</a></li>
 				<li><a href="contactit.html">Contact</a></li>
 			</ul>
 		</nav>
@@ -107,7 +103,7 @@ include_once("php/news.php");
 					<li><a href="aboutit.html">About</a></li>
 					<li><a href="coursesit.html">Courses</a></li>
 					<li><a href="eventsit.html">Events</a></li>
-					<li><a href="newsit.html.php">News</a></li>
+					<li><a href="newsit.html">News</a></li>
 					<li><a href="contactit.html">Contact</a></li>
 				</ul>
 			</div>
