Added the news in het sidebar. Added all the news in the sidebar to all the pages (italian pages need translation). Also added style to main for the sidebar to work and get longer properly. I put a comment above the style I added. Tomorrow I will work on: Clicking on sidebar newsitem will direct you to news page. Maybe the photo upload gallery. Depends on our groupwork meeting

--- a/indexit.html
+++ b/indexit.html
@@ -30,7 +30,7 @@
 	<div id="navWrap">
 		<nav>
 			<ul>	
-				<li><a href="indexit.html">Home</a></li>
+				<li id="active"><a href="indexit.html">Home</a></li>
 				<li><a href="aboutit.html">Su di noi</a></li>
 				<li><a href="coursesit.html">Corsi</a></li>
 				<li><a href="eventsit.html">Eventi</a></li>
@@ -76,7 +76,18 @@
 		</div>
 		<aside>
 			<div>
-				Novità
+				<div class="newsitem_sidebar">
+					<h3>DU received qualification</h3>
+					<p class="desc">In 2017 DaVinci University received the top qualification in the HBO Selection Guide.</p>
+				</div>
+				<div class="newsitem_sidebar">
+					<h3>Jump-start your job search</h3>
+					<p class="desc">In DaVinci University’s series “Jump-start Your Job Search,” DaVinci University brings you short interviews with companies linked to your education.</p>
+				</div>
+				<div class="newsitem_sidebar">
+					<h3>DU student won the Luthier price</h3>
+					<p class="desc">8349 people joined this year's race against the clock to make the perfect stringed instrument in 1 week, working on their instrument 5 hours a day</p>
+				</div>
 			</div>
 			<div>
 				Previsioni
