--- a/news.html
+++ b/news.html
@@ -36,7 +36,7 @@
 				<li><a href="about.html">About</a></li>
 				<li><a href="courses.html">Courses</a></li>
 				<li><a href="events.html">Events</a></li>
-				<li><a href="news.html">News</a></li>
+				<li id="active"><a href="news.html">News</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
@@ -84,16 +84,16 @@
 		<aside>
 			<div>
 				<div class="newsitem_sidebar">
-					<h3>NewsItem1</h3>
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac mattis leo. Donec accom</p>
+					<h3>DU received qualification</h3>
+					<p class="desc">In 2017 DaVinci University received the top qualification in the HBO Selection Guide.</p>
 				</div>
 				<div class="newsitem_sidebar">
-					<h3>NewsItem2</h3>
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac mattis leo. Donec accom</p>
+					<h3>Jump-start your job search</h3>
+					<p class="desc">In DaVinci University’s series “Jump-start Your Job Search,” DaVinci University brings you short interviews with companies linked to your education.</p>
 				</div>
 				<div class="newsitem_sidebar">
-					<h3>NewsItem3</h3>
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac mattis leo. Donec accom</p>
+					<h3>DU student won the Luthier price</h3>
+					<p class="desc">8349 people joined this year's race against the clock to make the perfect stringed instrument in 1 week, working on their instrument 5 hours a day</p>
 				</div>
 			</div>
 			<div>
