--- a/newsit.html
+++ b/newsit.html
@@ -36,7 +36,7 @@
 				<li><a href="aboutit.html">About</a></li>
 				<li><a href="coursesit.html">Courses</a></li>
 				<li><a href="eventsit.html">Events</a></li>
-				<li><a href="newsit.html">News</a></li>
+				<li id="active"><a href="newsit.html">News</a></li>
 				<li><a href="contactit.html">Contact</a></li>
 			</ul>
 		</nav>
