--- a/contactit.html
+++ b/contactit.html
@@ -38,7 +38,7 @@
 				<li><a href="coursesit.html">Corsi</a></li>
 				<li><a href="eventsit.html">Eventi</a></li>
 				<li><a href="newsit.html">Novità</a></li>
-				<li><a href="contactit.html">Contatti</a></li>
+				<li id="active"><a href="contactit.html">Contatti</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -131,7 +131,18 @@
 		</div>
 		<aside>
 			<div>
-				Novità
+				<div class="newsitem_sidebar">
+					<h3>DU received qualification</h3>
+					<p class="desc">In 2017 DaVinci University received the top qualification in the HBO Selection Guide.</p>
+				</div>
+				<div class="newsitem_sidebar">
+					<h3>Jump-start your job search</h3>
+					<p class="desc">In DaVinci University’s series “Jump-start Your Job Search,” DaVinci University brings you short interviews with companies linked to your education.</p>
+				</div>
+				<div class="newsitem_sidebar">
+					<h3>DU student won the Luthier price</h3>
+					<p class="desc">8349 people joined this year's race against the clock to make the perfect stringed instrument in 1 week, working on their instrument 5 hours a day</p>
+				</div>
 			</div>
 			<div>
 				Previsioni
