--- a/coursesit.html
+++ b/coursesit.html
@@ -30,7 +30,7 @@
 			<ul>	
 				<li><a href="indexit.html">Home</a></li>
 				<li><a href="aboutit.html">Su di noi</a></li>
-				<li><a href="coursesit.html">Corsi</a></li>
+				<li id="active"><a href="coursesit.html">Corsi</a></li>
 				<li><a href="eventsit.html">Eventi</a></li>
 				<li><a href="newsit.html">Novità</a></li>
 				<li><a href="contactit.html">Contatti</a></li>
@@ -173,7 +173,18 @@
 		</div>
 		<aside>
 			<div>
-				Novità
+				<div class="newsitem_sidebar">
+					<h3>NewsItem1</h3>
+					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac mattis leo. Donec accom</p>
+				</div>
+				<div class="newsitem_sidebar">
+					<h3>NewsItem2</h3>
+					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac mattis leo. Donec accom</p>
+				</div>
+				<div class="newsitem_sidebar">
+					<h3>NewsItem3</h3>
+					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac mattis leo. Donec accom</p>
+				</div>
 			</div>
 			<div>
 				Previsioni
