--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<li><a href="courses.html">Courses</a></li>
 				<li><a href="events.html">Events</a></li>
 				<li><a href="news.html">News</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="contact.php">Contact</a></li>
 			</ul>
 		</nav>
 	</div>
