The correct commit

--- a/news.html
+++ b/news.html
@@ -44,7 +44,7 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<div><h1>DaVinci University received the top qualification</h1> <span>26 October 2017</span> </div>
+				<h2>DaVinci University received the top qualification</h2> <span>26 October 2017</span>
 				<p>
 					In 2017 DaVinci University received the top qualification in the HBO Selection Guide. The themes: teachers, preparation career care, guidance and testing among other things made this qualification possible.<br><br>
 					DaVinci University Executive Board:<br>
@@ -57,7 +57,7 @@
 			</article>
 
 			<article>
-				<div><h1>“Jump-start your job search” great success</h1> <span>13 September 2017</span> </div>
+				<h2>“Jump-start your job search” great success</h2> <span>13 September 2017</span>
 				<p>
 					In DaVinci University’s series “Jump-start Your Job Search,” DaVinci University brings you short interviews with companies linked to your education. The first session had a big turn up.<br><br>
 					During one of these session. Companies tell you what they look for when hiring and offer advice for those just embarking on a career.
@@ -68,7 +68,7 @@
 			</article>
 
 			<article>
-				<div><h1>DaVinci University student won the Luthier price</h1> <span>23 August 2017</span> </div>
+				<h2>DaVinci University student won the Luthier price</h2> <span>23 August 2017</span>
 				<p>
 					8349 people joined this year's race against the clock to make the perfect stringed instrument in 1 week, working on their instrument 5 hours a day.<br>
 					There are prizes to win for the categories: Violin, Guitar, Cello, Viola and Bass guitar.<br><br>
