--- a/contactit.html
+++ b/contactit.html
@@ -38,7 +38,7 @@
 				<li><a href="coursesit.html">Corsi</a></li>
 				<li><a href="eventsit.html">Eventi</a></li>
 				<li><a href="newsit.html">Novità</a></li>
-				<li id="active"><a href="contactit.html">Contatti</a></li>
+				<li id="active"><a href="contactit.php">Contatti</a></li>
 			</ul>
 		</nav>
 	</div>
