--- a/newsit.html
+++ b/newsit.html
@@ -37,7 +37,7 @@
 				<li><a href="coursesit.html">Courses</a></li>
 				<li><a href="eventsit.html">Events</a></li>
 				<li id="active"><a href="newsit.html">News</a></li>
-				<li><a href="contactit.html">Contact</a></li>
+				<li><a href="contactit.php">Contact</a></li>
 			</ul>
 		</nav>
 	</div>
