--- a/courses.html
+++ b/courses.html
@@ -33,7 +33,7 @@
 				<li id="active"><a href="courses.html">Courses</a></li>
 				<li><a href="events.html">Events</a></li>
 				<li><a href="news.html">News</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="contact.php">Contact</a></li>
 			</ul>
 		</nav>
 	</div>
