--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@
 				<li><a href="courses.html">Courses</a></li>
 				<li id="active"><a href="events.html">Events</a></li>
 				<li><a href="news.html">News</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="contact.php">Contact</a></li>
 
 			</ul>
 		</nav>
