--- a/eventsit.html
+++ b/eventsit.html
@@ -37,7 +37,7 @@
 				<li><a href="coursesit.html">Corsi</a></li>
 				<li id="active"><a href="eventsit.html">Eventi</a></li>
 				<li><a href="newsit.html">Novità</a></li>
-				<li><a href="contactit.html">Contatti</a></li>
+				<li><a href="contactit.php">Contatti</a></li>
 			</ul>
 		</nav>
 	</div>
