--- a/indexit.html
+++ b/indexit.html
@@ -35,7 +35,7 @@
 				<li><a href="coursesit.html">Corsi</a></li>
 				<li><a href="eventsit.html">Eventi</a></li>
 				<li><a href="newsit.html">Novità</a></li>
-				<li><a href="contactit.html">Contatti</a></li>
+				<li><a href="contactit.php">Contatti</a></li>
 			</ul>
 		</nav>
 	</div>
